# vet_ai

./: README.md
filframe_ai/: lighthousereport.md  pyproject.toml
filframe_ai/knowledge/: user_preference.txt
filframe_ai/src/: api.py  lighthousereport.md  organized_data.json  raw_analysis.json  veterinary_analysis_report.md
filframe_ai/src/filframe_ai/: crew.py  main.py
filframe_ai/src/filframe_ai/config/: agents.yaml  cat_patients.json  tasks.yaml
vet-insights-frontend/: package-lock.json  package.json
vet-insights-frontend/src/: App.js  api.js
vet-insights-frontend/src/components/: DisplayData.jsx  FetchData.jsx  UploadReport.jsx
