[project]
name = "filframe_ai"
version = "0.1.0"
description = "filframe-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "lighthouseweb3>=0.1.1"
]

[project.scripts]
filframe_ai = "filframe_ai.main:run"
run_crew = "filframe_ai.main:run"
train = "filframe_ai.main:train"
replay = "filframe_ai.main:replay"
test = "filframe_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
